# hex-world

./: Cargo.toml
assets/shaders/: shader.wgsl
src/: main.rs
src/application/: camera.rs  context.rs  instance.rs  mod.rs  texture.rs
src/renderer/: camera.rs  mod.rs  texture.rs
src/world/: camera_controller.rs  mod.rs
