[package]
name = "hex-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.18"
wgpu = "0.16.1"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
image = "0.24.6"
cgmath = "0.18.0"